--- a/pom.xml
+++ b/pom.xml
@@ -33,4 +33,45 @@
 
 
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>rtl433toaprs</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>
+										org.jdamico.javax25.App
+									</mainClass>
+								</manifest>
+
+								<manifestEntries>
+									<Implementation-Vendor>Jose Damico (PU2LVM)</Implementation-Vendor>
+									<Implementation-Version>${project.version}</Implementation-Version>
+								</manifestEntries>
+
+							</archive>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+					</execution>
+
+					
+
+				</executions>
+			</plugin>
+			
+			
+		</plugins>
+	</build>
 </project>
